# reenix

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  dias  reenix-build-docker.sh  reenix-run-docker.sh  test  x86_64-reenix.json
.cargo/: config.toml
gdb/: init.gdb
iso/boot/grub/: grub.cfg
scripts/: reenix
src/: linker.ld  main.rs  reenix.rs
src/boot/: boot.S  mod.rs
src/drivers/: uart16550.rs
src/sync/: spinlock.rs
src/util/: debug.rs  io.rs
