[package]
name = "reenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uart_16550 = "0.3.0"
x86_64 = "0.15.1"

[lib]
name = "reenix"
path = "src/reenix.rs"
