[package]
name = "reenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
yansi = { version = "1.0.1", default-features = false }

[lib]
name = "reenix"
path = "src/reenix.rs"

[features]
proc_logging = []
